@@ -31,6 +31,7 @@ v0.5.6
  * hd44780/serial: Add support for adjustable backlight
  * Build system: Fix build with automake >= 1.11.3 (#3494755)
  * Fix clang compiler warnings about obsolete GNU designated initializers
+ * Fix crash when adding a menu item without text and options (S. Dawson)
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
